game-javadoc.err
src\game\GameModel.java:483: warning: no @param for i
	protected String getRow(int i ) {
	                 ^
src\game\GameView.java:1402: warning: no @param for langText
	protected JPanel makeBoardPanel(ResourceBundle langText, int gridSize, boolean markMode) {
	                 ^
src\game\GameView.java:1402: warning: no @param for markMode
	protected JPanel makeBoardPanel(ResourceBundle langText, int gridSize, boolean markMode) {
	                 ^
src\game\GameView.java:1402: warning: no @return
	protected JPanel makeBoardPanel(ResourceBundle langText, int gridSize, boolean markMode) {
	                 ^
src\game\GameView.java:1459: error: @param name not found
	 * @param locale   - Used to get the selected language. *
	          ^
src\game\GameView.java:1463: warning: no @param for currentLocale
	protected void updateText(Locale currentLocale, ResourceBundle langText) {
	               ^
src\game\GameView.java:1538: warning: no @param for currentLocale
	protected void Design(Locale currentLocale, ResourceBundle langText) {
	               ^
src\game\GameView.java:1538: warning: no @param for langText
	protected void Design(Locale currentLocale, ResourceBundle langText) {
	               ^
src\game\GameView.java:1563: warning: no @param for currentlocale
	protected void Play(Locale currentlocale, ResourceBundle langText) {
	               ^
src\game\GameView.java:1563: warning: no @param for langText
	protected void Play(Locale currentlocale, ResourceBundle langText) {
	               ^
src\game\GameView.java:1589: error: @param name not found
	 * @param locale - Used to get the selected language. *
	          ^
src\game\GameView.java:1592: warning: no @param for currentLocale
	protected void Instructions(Locale currentLocale, ResourceBundle langText) {
	               ^
src\game\GameView.java:1592: warning: no @param for langText
	protected void Instructions(Locale currentLocale, ResourceBundle langText) {
	               ^
